# university-db

./: .gitignore  CMakeLists.txt  Database.cpp  Database.hpp  DatabaseToFile.cpp  DatabaseToFile.hpp  Employee.cpp  Employee.hpp  EmployeeFileBuilder.cpp  EmployeeFileBuilder.hpp  EmployeeManualBuilder.cpp  EmployeeManualBuilder.hpp  EmployeeRandomBuilder.cpp  EmployeeRandomBuilder.hpp  Helpers.hpp  Person.cpp  Person.hpp  PersonBuilder.cpp  PersonBuilder.hpp  PersonBuilderDirector.cpp  PersonBuilderDirector.hpp  PersonFileBuilder.cpp  PersonFileBuilder.hpp  PersonManualBuilder.cpp  PersonManualBuilder.hpp  PersonRandomBuilder.cpp  PersonRandomBuilder.hpp  README.md  Student.cpp  Student.hpp  StudentFileBuilder.cpp  StudentFileBuilder.hpp  StudentManualBuilder.cpp  StudentManualBuilder.hpp  StudentRandomBuilder.cpp  StudentRandomBuilder.hpp  main.cpp
Tests/: CMakeLists.txt  DatabaseTest.cpp  RandomBuilderTest.cpp  UnitTests.cpp
assets/: data.json  databaseTest.json
